infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ulms-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: ulms-prod
